--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<mat-toolbar class="header">
+    <span class="header-title">Universidad de Costa Rica | Tropicalización de la Tecnología</span>
+</mat-toolbar>
