--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,5 @@
-<mat-sidenav class="sidenav" #sidenav mode="side" 
-  [(opened)]="opened" (opened)="events.push('open!')"
-  (closed)="events.push('close!')">
-  <h2>Tropicalización de la Tecnología</h2>
-  
-</mat-sidenav> 
+<ul class="sidebar-list">
+  <li class="sidebar-items" *ngFor="let value of content">
+    <a routerLink={{value.url}} >{{value.name}}</a>
+  </li>
+</ul>
