--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,8 +1,9 @@
-.example-container {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #8ed8f8 ;
+.sidebar-list{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.sidebar-items{
+  margin: 2rem;
 }
