--- a/src/app/layout/home-layout.component.html
+++ b/src/app/layout/home-layout.component.html
@@ -1,6 +1,13 @@
-<div class="home-layout-container">
-  <div class="sidebar-container">    
-    <app-sidebar></app-sidebar>   
-  </div>
-  <router-outlet></router-outlet>
-</div>
+<app-header></app-header>
+<mat-drawer-container class="home-layout-container">   
+  <mat-drawer opened mode="side" class="drawer">
+      <div class="drawer-content"> 
+        <app-sidebar></app-sidebar>
+      </div>
+    </mat-drawer>
+  <mat-drawer-content>
+    <div class="main-content-container">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-drawer-content> 
+</mat-drawer-container> 
