--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+$primary-color: #8ed8f8;
+$secondary-color: rgb(243,112, 33);
