--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,16 @@
 <div>
   <h1>Perfil</h1>
+  <h2>Progreso</h2>
+  <p>Horas realizadas: {{profile.horasTotales}}</p>
+  <p>Fecha de finalización: {{profile.fechaFinal}}</p>
+  <p>Fecha de inicio: {{profile.fechaInicio}}</p>
+  <h2>Datos de TCU</h2>
+  <p>Proyectos: {{profile.proyectos}}</p>
+  <p>Tipo: {{profile.tipo}}</p>
+  <p>Estado: {{profile.estado}}</p>
+  <h2>Datos Personales</h2>
+  <p>Nombre: {{profile.usuario.nombre}} {{profile.usuario.apellidos}}</p>
+  <p>Correo: {{profile.usuario.correo}}</p>
+  <p>Carné: {{profile.carne}}</p>
+  <p>Teléfono: {{profile.usuario.telefono}}</p>
 </div>
