Inicio de sesión automático y logout

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,4 +2,7 @@
   <li class="sidebar-items" *ngFor="let value of content">
     <a routerLink={{value.url}} >{{value.name}}</a>
   </li>
+  <li class="sidebar-items">
+    <a routerLink="" (click)="logout()">Cerrar sesión</a>
+  </li>
 </ul>
