--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
             </td>
           </tr>
           <tr>
-          <td><mat-form-field class="">
+          <td><mat-form-field class="login-width-input">
             <input matInput placeholder="Contraseña" [(ngModel)]="password"type="password" name="password" required>
           </mat-form-field></td>
         </tr></table>
