--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -13,4 +13,5 @@
   <p>Correo: {{profile.usuario.correo}}</p>
   <p>Carné: {{profile.carne}}</p>
   <p>Teléfono: {{profile.usuario.telefono}}</p>
+  <p>Email: {{email | async}}</p>
 </div>
