--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,9 +1,14 @@
 .sidebar-list{
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style: none; 
 }
 
 .sidebar-items{
-  margin: 2rem;
+  margin: 2rem; 
+}
+
+.sidebar-link{ 
+  text-decoration: none;
+  text-decoration-color: none; 
 }
