Suscribirse al cambio de "IsLoggedIn"

--- a/src/features/profile/profile.component.html
+++ b/src/features/profile/profile.component.html
@@ -13,5 +13,5 @@
   <p>Correo: {{profile.usuario.correo}}</p>
   <p>Carné: {{profile.carne}}</p>
   <p>Teléfono: {{profile.usuario.telefono}}</p>
-  <p>Email: {{(user | async).email}}</p>
+  <!--<p>Email: {{(user | async).email}}</p>-->
 </div>
