mat table data source for activities working and displaying correctly

--- a/src/features/activities/activities.component.html
+++ b/src/features/activities/activities.component.html
@@ -20,12 +20,17 @@
   
       <ng-container matColumnDef="categoria">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Categoria </th>
-        <td mat-cell *matCellDef="let element"> {{element.categoria}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.categoria.nombre}} </td>
       </ng-container>
   
       <ng-container matColumnDef="estado">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
         <td mat-cell *matCellDef="let element"> {{element.estado}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="detalles">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Detalles </th>
+        <td mat-cell *matCellDef="let element"> Detalles Link </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
