se agregan dias restantes al profile

--- a/src/features/profile/profile.component.html
+++ b/src/features/profile/profile.component.html
@@ -2,6 +2,7 @@
   <h1>Perfil</h1>
   <h2>Progreso</h2>
   <p>Horas realizadas: {{profile.horasTotales}}</p>
+  <p>Días restantes: {{profile.diasRestantes}}</p>
   <p>Fecha de finalización: {{profile.fechaFinal}}</p>
   <p>Fecha de inicio: {{profile.fechaInicio}}</p>
   <h2>Datos de TCU</h2>
