changes to the sidebar

--- a/src/features/profile/profile.component.html
+++ b/src/features/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h1>Perfil</h1>
+  <h1>{{profile.usuario.nombre}} {{profile.usuario.apellidos}}</h1>
   <h2>Progreso</h2>
   <p>Horas realizadas: {{profile.horasTotales}}</p>
   <p>Días restantes: {{profile.diasRestantes}}</p>
