--- a/src/shared/home-layout/home-layout.component.scss
+++ b/src/shared/home-layout/home-layout.component.scss
@@ -2,7 +2,6 @@
 
 .home-layout-container{
   display: flex;
-  height: 100vh;
 }
 
 .sidebar-container{
@@ -21,5 +20,5 @@
 
 .main-content-container{
   padding: 2rem;
-  width: 100%;
+  width: 70vw;
 }
