el form se hace reactive, se traen los projects y categories para el select, se agregan algunos validators

--- a/src/features/activities/activity-register/activity-register.component.html
+++ b/src/features/activities/activity-register/activity-register.component.html
@@ -1,27 +1,33 @@
 <h1>Registrar actividad</h1>
-<div class="form-container">
-
+<form class="form-container" [formGroup]="activityForm" (ngSubmit)="addActivity()">
   <mat-form-field>
-    <mat-select placeholder="Proyecto">
-      <mat-option value="option">Option</mat-option>
+    <mat-select placeholder="Proyecto" required>
+      <mat-option *ngFor="let project of projects" [value]="project" formControlName="project" required>{{project}}</mat-option>
     </mat-select>
   </mat-form-field>
 
   <mat-form-field>
-    <mat-select placeholder="Categoría">
-      <mat-option value="option">Option</mat-option>
+    <mat-select placeholder="Categoría" required>
+      <mat-option *ngFor="let category of categories" [value]="category" formControlName="category" required>{{category}}</mat-option>
     </mat-select>
   </mat-form-field>
-          
-  <mat-form-field>
-      <input matInput placeholder="Horas trabajadas">
-    </mat-form-field>
-
-  <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
 
   <mat-form-field>
-    <textarea matInput placeholder="Detalles"></textarea>
+    <input matInput placeholder="Horas trabajadas" formControlName="hours" required>
   </mat-form-field>
-</div>
+
+  <mat-form-field>
+    <input matInput [matDatepicker]="picker" placeholder="Fecha del trabajo realizado" formControlName="date" required>
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+
+  <mat-form-field>
+    <textarea matInput placeholder="Detalles" formControlName="details"></textarea>
+  </mat-form-field>
+  
+  <div>
+    <a mat-button routerLink="/actividades">Cancelar</a>
+    <button mat-button color="primary" type="submit">Aceptar</button>
+  </div>
+</form>
