--- a/src/features/activities/activities.component.html
+++ b/src/features/activities/activities.component.html
@@ -1,6 +1,6 @@
 <div>
   <h1>Actividades</h1>
-  <a mat-button routerLink="/registrar-actividad" class="">Registrar actividad</a>
+  <a mat-raised-button routerLink="/registrar-actividad" class="top-button" color="primary">Registrar actividad</a>
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
   
@@ -30,14 +30,16 @@
       </ng-container>
   
       <ng-container matColumnDef="detalles">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Detalles </th>
-        <td mat-cell *matCellDef="let element"> Detalles Link </td>
+        <th mat-header-cell *matHeaderCellDef> Opciones </th>
+        <td mat-cell *matCellDef="let element">
+            <a mat-icon-button routerLink="/perfil" [disableRipple]="true"><i class="material-icons">description</i></a> 
+            <button mat-icon-button [disableRipple]="true"><i class="material-icons">edit</i></button> 
+            <button mat-icon-button [disableRipple]="true"><i class="material-icons">delete_outline</i></button>
+        </td>
       </ng-container>
-  
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-  
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div> 
 </div>
