--- a/src/features/activities/activities.component.html
+++ b/src/features/activities/activities.component.html
@@ -34,7 +34,7 @@
         <td mat-cell *matCellDef="let element">
             <a mat-icon-button routerLink="/perfil" [disableRipple]="true"><i class="material-icons">description</i></a> 
             <button mat-icon-button [disableRipple]="true"><i class="material-icons">edit</i></button> 
-            <button mat-icon-button [disableRipple]="true"><i class="material-icons">delete_outline</i></button>
+            <button mat-icon-button [disableRipple]="true" (click)="openDialog()"><i class="material-icons">delete_outline</i></button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
