--- a/src/shared/dialog/dialog.component.html
+++ b/src/shared/dialog/dialog.component.html
@@ -3,6 +3,6 @@
   <p>{{data.content}}</p> 
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Aceptar</button>
+  <button mat-button [mat-dialog-close]="false">Cancelar</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Aceptar</button>
 </div>
