delete actividad ahora actualiza el state de ngrx y se agregan tooltips a los elementos

--- a/src/features/activities/activities.component.html
+++ b/src/features/activities/activities.component.html
@@ -32,9 +32,18 @@
       <ng-container matColumnDef="detalles">
         <th mat-header-cell *matHeaderCellDef> Opciones </th>
         <td mat-cell *matCellDef="let element">
-            <a mat-icon-button routerLink="/perfil" [disableRipple]="true"><i class="material-icons">description</i></a> 
-            <button mat-icon-button [disableRipple]="true"><i class="material-icons">edit</i></button> 
-            <button mat-icon-button [disableRipple]="true" (click)="onDelete(element.idGenerado)"><i class="material-icons">delete_outline</i></button>
+            <a mat-icon-button routerLink="/perfil" [disableRipple]="true" matTooltip="Descripción de la actividad"
+            aria-label="descripción de la actividad">
+              <i class="material-icons">description</i>
+            </a> 
+            <button mat-icon-button [disableRipple]="true" matTooltip="Editar actividad"
+            aria-label="editar actividad">
+              <i class="material-icons">edit</i>
+            </button> 
+            <button mat-icon-button [disableRipple]="true" (click)="onDelete(element.idGenerado)" matTooltip="Borrar actividad"
+            aria-label="borrar actividad">
+              <i class="material-icons">delete_outline</i>
+            </button>
         </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
