--- a/src/features/activities/activity-register/activity-register.component.html
+++ b/src/features/activities/activity-register/activity-register.component.html
@@ -25,6 +25,20 @@
   <mat-form-field>
     <textarea matInput placeholder="Detalles" formControlName="detalles"></textarea>
   </mat-form-field>
+  <input type="file" #file style="display: none" (change)="onFilesAdded()" multiple />
+  <button [disabled]="uploading || uploadSuccessful" mat-raised-button color="primary" class="add-files-btn" (click)="addFiles()">
+      Add Files
+  </button>
+
+  <mat-list>
+      <mat-list-item *ngFor="let file of files">
+
+        <h4 mat-line>{{file.name}}</h4>
+
+        <mat-progress-bar *ngIf="progress" mode="determinate" [value]="progress[file.name].progress | async"></mat-progress-bar>
+
+      </mat-list-item>
+    </mat-list>
   
   <div>
     <a mat-button routerLink="/actividades">Cancelar</a>
