can now remove files from the list before uploading

--- a/src/features/activities/activity-register/activity-register.component.html
+++ b/src/features/activities/activity-register/activity-register.component.html
@@ -34,9 +34,7 @@
       <mat-list-item *ngFor="let file of files">
 
         <h4 mat-line>{{file.name}}</h4>
-
-        <mat-progress-bar *ngIf="progress" mode="determinate" [value]="progress[file.name].progress | async"></mat-progress-bar>
-
+        <button mat-button (click)="removeFile(file)"><i class="material-icons">cancel</i></button>
       </mat-list-item>
     </mat-list>
   
