Avances en recuperar contraseña Ya el camino feliz está implementado. Falta dar más feedback al usuario y acomodar los inputs

--- a/src/features/login/login/login.component.html
+++ b/src/features/login/login/login.component.html
@@ -20,7 +20,7 @@
         </tr></table>
       </form>
       <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
-      <a class="sidebar-link" routerLink="" (click)="logout()">¿Olvidaste tu contraseña?</a>
+      <a class="sidebar-link" routerLink="/olvido-contrasenna" (click)="logout()">¿Olvidaste tu contraseña?</a>
     </mat-card-content>
     <mat-card-actions> 
       <button mat-raised-button (click)="login()" color="primary">Login</button>
