--- a/src/features/activities/activity-register/activity-register.component.html
+++ b/src/features/activities/activity-register/activity-register.component.html
@@ -25,18 +25,15 @@
   <mat-form-field>
     <textarea matInput placeholder="Detalles" formControlName="detalles"></textarea>
   </mat-form-field>
-  <input type="file" #file style="display: none" (change)="onFilesAdded()" multiple />
-  <button [disabled]="uploading || uploadSuccessful" mat-raised-button color="primary" class="add-files-btn" (click)="addFiles()">
-      Add Files
-  </button>
 
+  <input formControlName="archivos" type="file" #file style="display: none" (change)="onFilesAdded()" multiple />
+  <button type="button" mat-raised-button color="primary" class="add-files-btn" (click)="addFiles()">Add Files</button>
   <mat-list>
-      <mat-list-item *ngFor="let file of files">
-
-        <h4 mat-line>{{file.name}}</h4>
-        <button mat-button (click)="removeFile(file)"><i class="material-icons">cancel</i></button>
-      </mat-list-item>
-    </mat-list>
+    <mat-list-item *ngFor="let file of files">
+      <h4 mat-line>{{file.name}}</h4>
+      <button mat-button (click)="removeFile(file)"><i class="material-icons">cancel</i></button>
+    </mat-list-item>
+  </mat-list>
   
   <div>
     <a mat-button routerLink="/actividades">Cancelar</a>
