se avanza con detalles de actividades

--- a/src/features/activities/activity-details/activity-details.component.html
+++ b/src/features/activities/activity-details/activity-details.component.html
@@ -1,6 +1,8 @@
 <h1>Actividad</h1>
-<p>Fecha: {{emptyActivity.fecha}}</p>
-<p>Horas: </p>
-<p>Proyecto: </p>
-<p>Categoría</p>
-<p>Estado: </p>
+<p>Fecha: {{activity.fecha}}</p>
+<p>Horas: {{activity.horas}}</p>
+<p>Proyecto: {{activity.proyecto.nombre}}</p>
+<p>Categoría {{activity.categoria.nombre}}</p>
+<p>Estado: {{activity.estado}}</p>
+<p>Detalles: {{activity.detalles}}</p>
+<p>Archivos:</p> <a  href=""></a>
