--- a/src/features/activities/activity-details/activity-details.component.html
+++ b/src/features/activities/activity-details/activity-details.component.html
@@ -5,4 +5,5 @@
 <p>Categoría {{activity.categoria.nombre}}</p>
 <p>Estado: {{activity.estado}}</p>
 <p>Detalles: {{activity.detalles}}</p>
-<p>Archivos:</p> <a *ngFor="let file of files" href="{{file}}" download>{{file}}</a>
+<p>Archivos: <span  *ngIf="files === null">No tiene archivos.</span>  
+</p> <a *ngFor="let file of files" href="{{file}}" download>{{file}}</a>
