Finalización del olvidó contraseña

--- a/src/features/forgot-password/forgot-password/forgot-password.component.html
+++ b/src/features/forgot-password/forgot-password/forgot-password.component.html
@@ -1,17 +1,18 @@
-<div>
+<div class="forgot-password-container">
   <mat-card>
     <mat-card-header>
       <mat-card-title>Recuperar contraseña</mat-card-title>
+      <mat-card-subtitle>Ingrese su correo electrónico para recibir un código de recuperación</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <form (ngSubmit)="sendRetrievalCode()">
+      <form (ngSubmit)="sendRetrievalCode()" class="forgot-password-form">
         <mat-form-field>
           <input matInput placeholder="Correo" [(ngModel)]="email" name="username" required>
         </mat-form-field>
         <mat-card-actions>
           <button mat-raised-button type="submit" color="primary">Enviar código de recuperación</button>
         </mat-card-actions>
-        <p *ngIf="requestError$ | async">Error al solicitar el código de reucperación. Puede que el correo ingresado no tenga cuenta en el sistema</p>
+        <mat-error *ngIf="requestError$ | async">Error al solicitar el código de recuperación. Puede que el correo ingresado no tenga cuenta en el sistema</mat-error>
       </form>
     </mat-card-content>
   </mat-card>
