--- a/src/features/forgot-password/new-password/new-password.component.html
+++ b/src/features/forgot-password/new-password/new-password.component.html
@@ -1,22 +1,25 @@
-<div>
+<div class="new-password-container">
   <mat-card>
     <mat-card-header>
       <mat-card-title>Nueva contraseña</mat-card-title>
+      <mat-card-subtitle>Ingrese los datos para el cambio de contraseña</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <form (ngSubmit)="newPassword()">
+      <form (ngSubmit)="newPassword()" class="new-password-form">
         <mat-form-field>
           <input matInput placeholder="Código de recuperación" [(ngModel)]="code" name="code" required>
         </mat-form-field>
         <mat-form-field>
-          <input matInput placeholder="Contraseña nueva" [(ngModel)]="password" name="password" required>
+          <input matInput placeholder="Contraseña nueva" [(ngModel)]="password" type="password" name="password" required>
         </mat-form-field>
         <mat-form-field>
-          <input matInput placeholder="Repita su nueva contraseña" [(ngModel)]="confirmPass" name="confirmPass" required>
+          <input matInput placeholder="Repita su nueva contraseña" [(ngModel)]="confirmPass" type="password" name="confirmPass" required>
         </mat-form-field>
         <mat-card-actions>
           <button mat-raised-button type="submit" color="primary">Cambiar contraseña</button>
         </mat-card-actions>
+        <mat-error *ngIf="requestError$ | async">Error al cambiar la contraseña. Puede que el código de recuperación no sea el correcto</mat-error>
+        <mat-error *ngIf="confirmPassError">Las contraseñas no son iguales</mat-error>
       </form>
     </mat-card-content>
   </mat-card>
