--- a/src/features/activities/activity-details/activity-details.component.html
+++ b/src/features/activities/activity-details/activity-details.component.html
@@ -5,5 +5,8 @@
 <p>Categoría {{activity.categoria.nombre}}</p>
 <p>Estado: {{activity.estado}}</p>
 <p>Detalles: {{activity.detalles}}</p>
-<p>Archivos: <span  *ngIf="files === null">No tiene archivos.</span>  
-</p> <a *ngFor="let file of files" href="{{file}}" download>{{file}}</a>
+<p>Archivos: <span *ngIf="files === null || files.length === 0">No tiene archivos.</span></p> 
+<a *ngFor="let fileURI of fileURIs" href="{{fileURI}}" download>{{fileURI}}</a>
+<div class="activity-details-img-container" *ngFor="let uri of imageURIs">
+  <img src="{{uri}}" alt="">
+</div>
