modificar editar actividad funciona

--- a/src/features/activities/activity-edit/activity-edit.component.html
+++ b/src/features/activities/activity-edit/activity-edit.component.html
@@ -2,4 +2,6 @@
 <app-activity-form
   [id]="id"
   [activityValue]="activity"
+  [categories]="categories"
+  [projects]="projects"
   (submitted)="onSubmit($event)"></app-activity-form>
