--- a/src/features/activities/activity-edit/activity-edit.component.html
+++ b/src/features/activities/activity-edit/activity-edit.component.html
@@ -4,4 +4,5 @@
   [activityValue]="activity"
   [categories]="categories"
   [projects]="projects"
+  [files]="files"
   (submitted)="onSubmit($event)"></app-activity-form>
