Avances olvido-cambiar contraseña

--- a/src/features/forgot-password/forgot-password/forgot-password.component.html
+++ b/src/features/forgot-password/forgot-password/forgot-password.component.html
@@ -5,14 +5,16 @@
       <mat-card-subtitle>Ingrese su correo electrónico para recibir un código de recuperación</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <form (ngSubmit)="sendRetrievalCode()" class="forgot-password-form">
+      <form [formGroup]="forgotPassForm" (ngSubmit)="sendRetrievalCode()" class="forgot-password-form">
         <mat-form-field>
-          <input matInput placeholder="Correo" [(ngModel)]="email" name="username" required>
+          <input matInput placeholder="Correo" formControlName="email" name="username" #username="ngModel" required email>
+          <mat-error *ngIf="username.errors.email">Digite un email válido</mat-error>
+          <mat-error *ngIf="username.errors.required">Digite un email</mat-error>
+          <mat-error *ngIf="username.errors.requestError">Error al solicitar el código de recuperación</mat-error>
         </mat-form-field>
         <mat-card-actions>
-          <button mat-raised-button type="submit" color="primary">Enviar código de recuperación</button>
+          <button mat-raised-button type="submit" color="primary" [disabled]="!forgotPassForm.valid" ]>Enviar código de recuperación</button>
         </mat-card-actions>
-        <mat-error *ngIf="requestError$ | async">Error al solicitar el código de recuperación. Puede que el correo ingresado no tenga cuenta en el sistema</mat-error>
       </form>
     </mat-card-content>
   </mat-card>
