Finito todos los recuperar Tambien se implementó el spinner overlay

--- a/src/features/forgot-password/new-password/new-password.component.html
+++ b/src/features/forgot-password/new-password/new-password.component.html
@@ -1,24 +1,24 @@
 <div class="new-password-container">
-  <mat-card>
+  <mat-card #card>
     <mat-card-header>
       <mat-card-title>Nueva contraseña</mat-card-title>
       <mat-card-subtitle>Ingrese los datos para el cambio de contraseña</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <form (ngSubmit)="newPassword()" class="new-password-form">
+      <form [formGroup]="newPassForm" (ngSubmit)="newPassword()" class="new-password-form">
         <mat-form-field>
-          <input matInput placeholder="Código de recuperación" [(ngModel)]="code" name="code" required>
+          <input matInput placeholder="Código de recuperación" formControlName="code" name="code" required>
         </mat-form-field>
         <mat-form-field>
-          <input matInput placeholder="Contraseña nueva" [(ngModel)]="password" type="password" name="password" required>
+          <input matInput placeholder="Contraseña nueva" formControlName="password" type="password" name="password" required>
         </mat-form-field>
         <mat-form-field>
-          <input matInput placeholder="Repita su nueva contraseña" [(ngModel)]="confirmPass" type="password" name="confirmPass" required>
-          <mat-error *ngIf="requestError$ | async">Error al cambiar la contraseña. Puede que el código de recuperación no sea el correcto</mat-error>
-          <mat-error *ngIf="confirmPassError">Las contraseñas no son iguales</mat-error>
+          <input matInput placeholder="Repita su nueva contraseña" formControlName="confirmPass" type="password" name="confirmPass" required>
+          <mat-error *ngIf="confirmPass.errors?.requestError">Error al cambiar la contraseña. Puede que el código de recuperación no sea el correcto</mat-error>
+          <mat-error *ngIf="confirmPass.errors?.mustMatch">Las contraseñas no son iguales</mat-error>
         </mat-form-field>
         <mat-card-actions>
-          <button mat-raised-button type="submit" color="primary">Cambiar contraseña</button>
+          <button mat-raised-button type="submit" color="primary" [disabled]="newPassForm.invalid">Cambiar contraseña</button>
         </mat-card-actions>
       </form>
     </mat-card-content>
