--- a/src/features/login/login/login.component.html
+++ b/src/features/login/login/login.component.html
@@ -1,29 +1,25 @@
 <div class="login-container">
-  <mat-card class="login-card">
+  <mat-card class="login-card" #loginCard>
     <mat-card-header>
       <mat-card-title>Iniciar Sesión</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form class="login-form">
-        <table class="full-width-input" cellspacing="0">
-          <tr>
-            <td>
-              <mat-form-field class="login-width-input">
-              <input matInput placeholder="Correo" [(ngModel)]="username" name="username" required>
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-          <td><mat-form-field class="login-width-input">
-            <input matInput placeholder="Contraseña" [(ngModel)]="password" type="password" name="password" required>
-          </mat-form-field></td>
-        </tr></table>
+      <form class="login-form" [formGroup]="loginForm">
+        <mat-form-field>
+          <input matInput placeholder="Correo" formControlName="email" name="email" required>
+          <mat-error *ngIf="email.errors?.email">Digite un correo válido</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Contraseña" formControlName="password" type="password" name="password" required>
+          <mat-error *ngIf="password.errors?.loginFailed">Usuario y/o contraseña incorrecto(s)</mat-error>
+        </mat-form-field>
       </form>
-      <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
-      <a class="sidebar-link" routerLink="/olvido-contrasenna" (click)="logout()">¿Olvidaste tu contraseña?</a>
+      <a routerLink="/olvido-contrasenna" (click)="logout()">¿Olvidaste tu contraseña?</a>
     </mat-card-content>
     <mat-card-actions> 
-      <button mat-raised-button (click)="login()" color="primary">Login</button>
+      <button mat-raised-button (click)="login()" color="primary" [disabled]="loginForm.invalid">Login</button>
     </mat-card-actions>
   </mat-card>
 </div>
+
+<!--(showSpinner$ | async) ? 'block' : 'none'-->
