--- a/src/features/login/login/login.component.scss
+++ b/src/features/login/login/login.component.scss
@@ -1,31 +1,37 @@
-mat-card { 
-  margin: 2rem auto;
-  text-align: center;
-}
-
-.signin-content {
-  padding: 60px 1rem;
-}
-
-.full-width-input {
-  width: 100%;
-}
-
-.mat-card-header{
+.login-container{
+  height: 100%;
   display: flex;
   justify-content: center;
 }
 
-.login-card{
-  min-width: 20rem;
-  min-height: 14rem;
+.mat-card {
+  margin-top: 10rem;
+  width: max-content;
+  height: max-content;
 }
 
-.login-container{ 
+.login-card-container {
+  width: max-content;
+  height: max-content;
+}
+
+.mat-card-header {
   display: flex;
+  justify-content: center;
+}
+
+.mat-card-title {
+  text-align: center;
+}
+
+.login-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.login-width-input{
-  min-width: 15rem;
+.mat-form-field {
+  width: 20rem;
 }
