--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 $primary-color: #8ed8f8;
 $secondary-color: rgb(243,112, 33);
+
+.overlay-class {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
