--- a/src/features/change-password/change-password/change-password.component.html
+++ b/src/features/change-password/change-password/change-password.component.html
@@ -1,26 +1,26 @@
 <div class="change-password-container">
-  <mat-card>
+  <mat-card #card>
     <mat-card-header>
       <mat-card-title>Cambio de contraseña</mat-card-title>
       <mat-card-subtitle>Ingrese su contraseña actual y la nueva contraseña</mat-card-subtitle>
     </mat-card-header>
-    <form (ngSubmit)="changePassword()">
-      <mat-card-content>
+    <mat-card-content>
+      <form [formGroup]="changePasswordForm" (ngSubmit)="changePassword()" class="change-password-form">
         <mat-form-field>
-          <input matInput placeholder="Contraseña actual" type="password" [(ngModel)]="currentPass" name="currentPass">
+          <input matInput placeholder="Contraseña actual" type="password" formControlName="currentPass" name="currentPass" required>
         </mat-form-field>
         <mat-form-field>
-          <input matInput placeholder="Nueva contraseña" type="password" [(ngModel)]="newPass" name="newPass">
+          <input matInput placeholder="Nueva contraseña" type="password" formControlName="newPass" name="newPass" required>
         </mat-form-field>
         <mat-form-field>
-          <input matInput placeholder="Confirme la nueva contraseña" type="password" [(ngModel)]="confirmNewPass" name="confirmNewPass">
-          <mat-error *ngIf="confirmPassError">Las contraseñas no concuerdan</mat-error>
-          <mat-error *ngIf="changeError$ | async">Error al solicitar el cambio de contraseña</mat-error>
+          <input matInput placeholder="Confirme la nueva contraseña" type="password" formControlName="confirmNewPass" name="confirmNewPass" required>
+          <mat-error *ngIf="confirmNewPass.errors?.mustMatch">Las contraseñas no concuerdan</mat-error>
+          <mat-error *ngIf="confirmNewPass.errors?.requestError">Error al solicitar el cambio de contraseña</mat-error>
         </mat-form-field>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-raised-button type="submit" color="primary">Cambiar contraseña</button>
-      </mat-card-actions>
-    </form>
+        <mat-card-actions>
+          <button mat-raised-button type="submit" color="primary">Cambiar contraseña</button>
+        </mat-card-actions>
+      </form>
+    </mat-card-content>
   </mat-card>
 </div>
