--- a/src/features/profile/profile/profile.component.html
+++ b/src/features/profile/profile/profile.component.html
@@ -14,4 +14,5 @@
   <p>Correo: {{profile.usuario.correo}}</p>
   <p>Carné: {{profile.carne}}</p>
   <p>Teléfono: {{profile.usuario.telefono}}</p>
+  <button mat-button color="primary" routerLink="/cambiar-contrasenna">Cambiar contraseña</button>
 </div>
