--- a/src/features/activities/activity-register/activity-register.component.html
+++ b/src/features/activities/activity-register/activity-register.component.html
@@ -40,3 +40,11 @@
     <button mat-button color="primary" type="submit" [disabled]="!activityForm.valid">Aceptar</button>
   </div>
 </form>
+
+<!-- <app-activity-form
+  [id]="id"
+  [activityValue]="activity"
+  [categories]="categories"
+  [projects]="projects"
+  [files]="files"
+  (submitted)="onSubmit($event)"></app-activity-form> -->
