se refactoriza registrar actividad para trabajar con el componente activity form

--- a/src/features/activities/activity-edit/activity-edit.component.html
+++ b/src/features/activities/activity-edit/activity-edit.component.html
@@ -1,6 +1,7 @@
 <h1>Editar actividad</h1>
 <app-activity-form
   [id]="id"
+  [studentEmail]="studentEmail"
   [activityValue]="activity"
   [categories]="categories"
   [projects]="projects"
