se cambia diseño del spinner

--- a/src/shared/home-layout/home-layout.component.html
+++ b/src/shared/home-layout/home-layout.component.html
@@ -15,4 +15,9 @@
   <router-outlet></router-outlet>
 </ng-template>
 
-<ngx-spinner type="ball-atom"></ngx-spinner>
+<ngx-spinner 
+  type="ball-atom"
+  bdColor="#fff"
+  color="#000"
+  >
+</ngx-spinner>
