--- a/src/features/projects/components/project-details/project-details.component.html
+++ b/src/features/projects/components/project-details/project-details.component.html
@@ -1,1 +1,4 @@
-<p>project-details works!</p>
+<div *ngIf="project$ | async; let project">
+  <p>{{project.nombre}}</p>
+  <p>{{project.descripcion}}</p>
+</div>
