--- a/src/features/projects/components/projects-list/projects-list.component.html
+++ b/src/features/projects/components/projects-list/projects-list.component.html
@@ -10,5 +10,7 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row
+      *matRowDef="let row; columns: displayedColumns;"
+      [routerLink]="['/proyectos/detalles/', row.nombre]"></tr>
 </table>
