--- a/src/features/projects/components/project-details/project-details.component.html
+++ b/src/features/projects/components/project-details/project-details.component.html
@@ -20,4 +20,14 @@
     </mat-card-actions>
   </form>
 </mat-card>
-<app-project-students [projectName]="project.nombre"></app-project-students>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Estudiantes inscritos en el proyecto</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <app-project-students [projectName]="project.nombre"></app-project-students>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button color="primary" [routerLink]="['/proyectos/agregar-estudiantes', project.nombre]">Agregar estudiantes</button>
+  </mat-card-actions>
+</mat-card>
