--- a/src/features/projects/components/add-students-to-project/add-students-to-project.component.html
+++ b/src/features/projects/components/add-students-to-project/add-students-to-project.component.html
@@ -1,1 +1,56 @@
-<p>add-student-to-project works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Asignar nuevos estudiantes al proyecto</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+      <table mat-table [dataSource]="students$ | async">
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef>Correo</th>
+          <td mat-cell *matCellDef="let element">{{element.student.usuario.correo}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Nombre</th>
+          <td mat-cell *matCellDef="let element">{{element.student.usuario.nombre}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="lastN1">
+          <th mat-header-cell *matHeaderCellDef>Primer apellido</th>
+          <td mat-cell *matCellDef="let element">{{element.student.usuario.apellidos.split(' ')[0]}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="lastN2">
+          <th mat-header-cell *matHeaderCellDef>Segundo apellido</th>
+          <td mat-cell *matCellDef="let element">{{element.student.usuario.apellidos.split(' ')[1]}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>Asignar</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-checkbox
+              (change)="chooseStudent($event, element.student)"
+              [checked]="element.selected"
+            ></mat-checkbox>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    <div *ngIf="studentsPage$ |async as page">
+      <mat-paginator
+        [length]="page.totalElements"
+        [pageSize]="page.size"
+        [pageIndex]="page.number"
+        [pageSizeOptions]="[2, 5, 10, 20]"
+        (page)="getNewPage($event)"
+      ></mat-paginator>
+    </div>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button color="primary"
+            (click)="addStudents()"
+            [disabled]="!(selectedExist$ | async)" >Agregar estudiantes seleccionados</button>
+  </mat-card-actions>
+</mat-card>
+
