--- a/src/features/projects/components/projects-list/projects-list.component.html
+++ b/src/features/projects/components/projects-list/projects-list.component.html
@@ -1,16 +1,18 @@
-<table mat-table [dataSource]="projects$ | async">
-  <ng-container matColumnDef="nombre">
-    <th mat-header-cell *matHeaderCellDef>Nombre</th>
-    <td mat-cell *matCellDef="let element">{{element.nombre}}</td>
-  </ng-container>
+<div *ngIf="projects$ | async as project">
+  <table mat-table [dataSource]="project.content">
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let element">{{element.nombre}}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="descripcion">
-    <th mat-header-cell *matHeaderCellDef>Descripcion</th>
-    <td mat-cell *matCellDef="let element">{{element.descripcion}}</td>
-  </ng-container>
+    <ng-container matColumnDef="descripcion">
+      <th mat-header-cell *matHeaderCellDef>Descripcion</th>
+      <td mat-cell *matCellDef="let element">{{element.descripcion}}</td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row
-      *matRowDef="let row; columns: displayedColumns;"
-      [routerLink]="['/proyectos/detalles/', row.nombre]"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row
+        *matRowDef="let row; columns: displayedColumns;"
+        [routerLink]="['/proyectos/detalles/', row.nombre]"></tr>
+  </table>
+</div>
