Asignar estudiantes a proyecto, y paginación de las otras tablas terminado

--- a/src/features/projects/components/project-students/project-students.component.html
+++ b/src/features/projects/components/project-students/project-students.component.html
@@ -1,28 +1,45 @@
-<div *ngIf="students$ | async as students">
-  <table mat-table [dataSource]="students.content">
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>Correo</th>
-      <td mat-cell *matCellDef="let element">{{element.usuario.correo}}</td>
-    </ng-container>
+<table mat-table [dataSource]="students$ | async">
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef>Correo</th>
+    <td mat-cell *matCellDef="let element">{{element.usuario.correo}}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Nombre</th>
-      <td mat-cell *matCellDef="let element">{{element.usuario.nombre}}</td>
-    </ng-container>
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Nombre</th>
+    <td mat-cell *matCellDef="let element">{{element.usuario.nombre}}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="lastN1">
-      <th mat-header-cell *matHeaderCellDef>Primer apellido</th>
-      <td mat-cell *matCellDef="let element">{{element.usuario.apellidos.split(' ')[0]}}</td>
-    </ng-container>
+  <ng-container matColumnDef="lastN1">
+    <th mat-header-cell *matHeaderCellDef>Primer apellido</th>
+    <td mat-cell *matCellDef="let element">{{element.usuario.apellidos.split(' ')[0]}}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="lastN2">
-      <th mat-header-cell *matHeaderCellDef>Segundo apellido</th>
-      <td mat-cell *matCellDef="let element">{{element.usuario.apellidos.split(' ')[1]}}</td>
-    </ng-container>
+  <ng-container matColumnDef="lastN2">
+    <th mat-header-cell *matHeaderCellDef>Segundo apellido</th>
+    <td mat-cell *matCellDef="let element">{{element.usuario.apellidos.split(' ')[1]}}</td>
+  </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row
-        *matRowDef="let row; columns: displayedColumns;"
-        [routerLink]="['/estudiantes/detalles/', row.usuario.correo]"></tr>
-  </table>
+  <ng-container matColumnDef="erase">
+    <th mat-header-cell *matHeaderCellDef>Remover</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button>
+        <mat-icon (click)="removeStudent(element); $event.stopPropagation();">close</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row
+      *matRowDef="let row; columns: displayedColumns;"
+      [routerLink]="['/estudiantes/detalles/', row.usuario.correo]"></tr>
+</table>
+<div *ngIf="studentsPage$ |async as page">
+  <mat-paginator
+    [length]="page.totalElements"
+    [pageSize]="page.size"
+    [pageIndex]="page.number"
+    [pageSizeOptions]="[2, 5, 10, 20]"
+    (page)="getNewPage($event)"
+  ></mat-paginator>
 </div>
+
