--- a/src/features/projects/components/project-details/project-details.component.html
+++ b/src/features/projects/components/project-details/project-details.component.html
@@ -10,7 +10,7 @@
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button *ngIf="!editing; else editButtons" color="primary" (click)="editing = true;">Editar
+      <button mat-raised-button *ngIf="!editing; else editButtons" color="primary" (click)="editing = true;">Editar
         descripción
       </button>
       <ng-template #editButtons>
@@ -28,6 +28,11 @@
     <app-project-students [projectName]="project.nombre"></app-project-students>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button color="primary" [routerLink]="['/proyectos/agregar-estudiantes', project.nombre]">Agregar estudiantes</button>
+    <button mat-raised-button color="primary" [routerLink]="['/proyectos/agregar-estudiantes', project.nombre]">Agregar estudiantes</button>
+  </mat-card-actions>
+</mat-card>
+<mat-card>
+  <mat-card-actions>
+    <button mat-raised-button color="warn" (click)="deleteProject()">Borrar proyecto</button>
   </mat-card-actions>
 </mat-card>
