--- a/src/features/projects/components/projects-list/projects-list.component.html
+++ b/src/features/projects/components/projects-list/projects-list.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="projects$ | async as project">
-  <table mat-table [dataSource]="project.content">
+  <table mat-table [dataSource]="project">
     <ng-container matColumnDef="nombre">
       <th mat-header-cell *matHeaderCellDef>Nombre</th>
       <td mat-cell *matCellDef="let element">{{element.nombre}}</td>
@@ -15,4 +15,13 @@
         *matRowDef="let row; columns: displayedColumns;"
         [routerLink]="['/proyectos/detalles/', row.nombre]"></tr>
   </table>
+</div>
+<div *ngIf="projectsPage$ |async as page">
+  <mat-paginator
+    [length]="page.totalElements"
+    [pageSize]="page.size"
+    [pageIndex]="page.number"
+    [pageSizeOptions]="[2, 5, 10, 20]"
+    (page)="getNewPage($event)"
+  ></mat-paginator>
 </div>
